# warehouse-ros-sim

./: .gitignore  README.md  amazon_warehouse.md
src/robo_ai/: CMakeLists.txt  package.xml
src/robo_ai/config/: ekf.yaml  nav2_params.yaml  navigate_through_poses_w_replanning_light_recovery.xml  navigate_to_pose_w_replanning_light_recovery.xml  rviz.rviz  slam_toolbox_localization.yaml  slam_toolbox_online.yaml  warehouse_nav.rviz
src/robo_ai/env-hooks/: 99-robo_ai-gazebo.dsv.in
src/robo_ai/gazebo/: delivery_robot.gazebo  delivery_robot_plugins.gazebo  plugins.gazebo  robo_ai.gazebo
src/robo_ai/gazebo/launch/: gazebo.launch.py
src/robo_ai/launch/: delivery_robot_sim.launch.py  main.launch.py  rviz.launch.py  state_publisher.launch.py  state_publisher_delivery.launch.py  warehouse_delivery.launch.py  warehouse_full.launch.py  warehouse_localization.launch.py  warehouse_nav.launch.py
src/robo_ai/maps/: warehouse_map.pgm  warehouse_map.yaml
src/robo_ai/models/markers/marker_aruco_0/: model.config  model.sdf
src/robo_ai/models/markers/marker_aruco_0/materials/scripts/: marker.material
src/robo_ai/models/markers/marker_aruco_1/: model.config  model.sdf
src/robo_ai/models/markers/marker_aruco_1/materials/scripts/: marker.material
src/robo_ai/models/markers/marker_aruco_2/: model.config  model.sdf
src/robo_ai/models/markers/marker_aruco_2/materials/scripts/: marker.material
src/robo_ai/models/markers/marker_aruco_3/: model.config  model.sdf
src/robo_ai/models/markers/marker_aruco_3/materials/scripts/: marker.material
src/robo_ai/models/urdf/: delivery_robot_description.xacro  rob_description.xacro
src/robo_ai/scripts/: auto_bootstrap_slam_map.py  bootstrap_drive_mission.py  bootstrap_slam_map.py  export_static_map_from_slam.py  generate_markers.py
src/robo_ai/worlds/: my_world.sdf  room2.sdf  warehouse.world
src/robo_ai_nav/: package.xml  setup.cfg  setup.py
src/robo_ai_nav/config/: marker_layout.yaml  nav_debug_monitor.yaml  nav_profiles.yaml  waypoints.yaml
src/robo_ai_nav/launch/: nav_debug_monitor.launch.py  waypoint_navigator.launch.py
src/robo_ai_nav/robo_ai_nav/: initial_pose_publisher.py  localized_pose.py  nav_debug_monitor.py  waypoint_navigator.py
src/robo_ai_vision/: package.xml  setup.cfg  setup.py
src/robo_ai_vision/launch/: marker_detector.launch.py
src/robo_ai_vision/robo_ai_vision/: marker_detector_node.py  marker_pose_math.py
src/robo_ai_vision/test/: test_marker_pose_math.py
